# nayu

./: AGENTS.md  Cargo.toml  README.md  justfile
crates/nayu-core/: Cargo.toml
crates/nayu-core/src/: lib.rs  protocol.rs  state.rs
crates/nayu-infra/: Cargo.toml
crates/nayu-infra/src/: env_detect.rs  ffmpeg_decode.rs  lib.rs  process_runner.rs
crates/nayu-infra/src/ipc/: client.rs  mod.rs  server.rs
crates/nayu-infra/src/wallpaper/: cosmic.rs  gnome.rs  kde.rs  mod.rs
crates/nayu-infra/src/wayland/: engine.rs  mod.rs  outputs.rs  render_shm.rs
crates/nayu-infra/src/x11/: engine.rs  mod.rs  xroot_props.rs
crates/nayu-infra/tests/: ipc.rs
docs/: architecture.md  coding-style.md  diagrams.md  errors.md  ipc.md  roadmap.md  vision.md  wayland.md  x11.md
src/: args.rs  main.rs  output.rs
